# schafkopfliste

./: .dockerignore  .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build_prod.sh  db_init.sql  docker-compose.yaml  mongo_init.js  prod_build.sh  rustfmt.toml  schafkopfliste.db  start_docker_postgres.sh
complex_sql_queries/: groups_with_player_count.sql
migrations/2020-02-05-110843_create_tables/: down.sql  up.sql
migrations/2020-03-02-180102_session_dates_update/: down.sql  up.sql
migrations/2020-03-03-083920_drop_column_game_price/: down.sql  up.sql
migrations/2020-03-05-115452_add_saldo_for_group/: down.sql  up.sql
migrations/2020-03-06-090140_suspend_group_membership/: down.sql  up.sql
react-ui/: .eslintrc.yml  codegen.yml  package-lock.json  package.json  schema.graphql
react-ui/src/: App.tsx  GroupForm.tsx  Groups.tsx  Home.tsx  LoginForm.tsx  RegisterForm.tsx  RuleSetForm.tsx  graphql.ts  index.tsx  queries.graphql  urls.tsx
react-ui/src/sessions/: GamesTable.tsx  gameTypes.ts
src/: additional_headers.rs  dao.rs  graphql.rs  jwt_helpers.rs  main.rs  models.rs  mongo.rs  my_routes.rs  routes.rs  schema.patch  schema.rs  schema.rs.rej  ts_type_writer.rs
src/daos/: complete_session_dao.rs  game_dao.rs  group_dao.rs  mod.rs  player_dao.rs  player_in_group_dao.rs  rule_set_dao.rs  session_dao.rs  session_result_dao.rs  user_dao.rs
src/graphql/: context.rs  group_mutations.rs  mod.rs  mutation.rs  query.rs  session_mutations.rs
src/models/: accumulated_result.rs  complete_session.rs  game.rs  game_dao.rs  game_enums.rs  group.rs  group_dao.rs  group_with_player_count.rs  mod.rs  player.rs  player_in_group.rs  player_in_group_dao.rs  rule_set.rs  session.rs  session_dao.rs  session_result.rs  user.rs
src/models/game/: game.rs  game_dao.rs  game_enums.rs  mod.rs
src/my_routes/: game_routes.rs  group_routes.rs  mod.rs  player_routes.rs  routes_helpers.rs  rule_set_routes.rs  user_routes.rs
src/my_routes/all_group_routes/: game_routes.rs  group_routes.rs  mod.rs  session_routes.rs
ui/: .eslintrc.yml  README.md  angular.json  codegen.yml  karma.conf.js  package-lock.json  package.json  schema.graphql  tslint.json
ui/e2e/src/: app.e2e-spec.ts
ui/public/: index.html
ui/src/: .graphqlconfig  App.tsx  BulmaCard.tsx  GroupBase.tsx  GroupForm.tsx  GroupOverview.tsx  Groups.tsx  Home.tsx  LoginForm.tsx  PlayerForm.tsx  PlayerTable.tsx  Players.tsx  PlayersInGroup.tsx  PlayersList.tsx  RegisterForm.tsx  RequireAuth.tsx  RuleSetCard.tsx  RuleSetForm.tsx  RuleSets.tsx  WithQuery.tsx  graphql.ts  index.html  index.sass  index.tsx  queries.graphql  schema.graphql  styles.sass  urls.tsx
ui/src/app/: _helpers.ts  app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  graphql.module.ts
ui/src/environments/: environment.prod.ts  environment.ts
ui/src/sessions/: GameForm.tsx  (+3 more)
(+93 files in other folders)
