[package]
name = "schafkopfliste"
version = "0.1.1"
authors = ["Björn Eyselein <bjoern.eyselein@uni-wuerzburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }

rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", default-features = false, features = ["json", "diesel_postgres_pool", "serve"] }
rocket_cors = "0.5.2"

diesel = { version = "1.4.5", features = ["chrono", "postgres", "uuid", "serde_json"] }
diesel-derive-enum = { version = "1.1.0", features = ["postgres"] }
diesel_migrations = "1.4.0"

serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.57"

jsonwebtoken = "*" # TODO: use 5.0.1 because of ring (rocket needs 0.13.5)
bcrypt = "0.9.0"

juniper = "0.15.3"
juniper_rocket = "0.6.2"
