[package]
name = "schafkopfliste"
version = "0.1.1"
authors = ["Björn Eyselein <bjoern.eyselein@uni-wuerzburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }

rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json", "diesel_postgres_pool", "serve"] }
rocket_cors = "0.5.2"

diesel = { version = "1.4.7", features = ["chrono", "postgres", "uuid", "serde_json"] }
diesel-derive-enum = { version = "1.1.0", features = ["postgres"] }
diesel_migrations = "1.4.0"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

jsonwebtoken = "7.2.0"
bcrypt = "0.10.0"

juniper = "0.15.7"
juniper_rocket = "0.7.1"
