[package]
name = "schafkopfliste"
version = "0.2.0"
authors = ["Björn Eyselein <bjoern.eyselein@uni-wuerzburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }

rocket = "0.5.0-rc.1"
# rocket_contrib = { version = "0.4.10", default-features = false, features = ["json", "diesel_postgres_pool", "serve"] }
# FIXME: use git version until new version...
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" } # "0.5.2"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
futures = "0.3.17"

diesel = { version = "1.4.8", features = ["chrono", "postgres", "uuid", "serde_json"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
diesel_migrations = "1.4.0"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

jsonwebtoken = "7.2.0"
bcrypt = "0.10.0"

juniper = { version = "0.15.7", features = ["scalar-naivetime"] }
juniper_rocket = "0.8.0"

tap = "1.0.1"
